@@ -1,3 +1,8 @@
+*unreleased*
+
+* Changed capture() helper to not raise an exception on error, but to warn instead [Jeff Forcier]
+
+
 *2.4.0* June 13, 2008
 
 * Added :normalize_asset_timestamps option to deployment, defaulting to true, which allows asset timestamping to be disabled [John Trupiano]
